chore(TopBar): Set fixed height on user-image-group to prevent UI jumping

--- a/ui_kit/src/components/user_image_group/styles.scss
+++ b/ui_kit/src/components/user_image_group/styles.scss
@@ -1,5 +1,6 @@
 .user-image-group-wrap {
     position: relative;
+    max-height: var(--height-input);
     height: var(--height-input);
     min-width: calc(var(--height-input) + var(--gap));
     max-width: calc(var(--height-input) + var(--gap));
